# Clothoids

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists-lua.txt  CMakeLists.txt  CMakeListsUser.cmake  Clothoids.mltbx  Clothoids.prj  ClothoidsConfig.cmake  ClothoidsConfig.cmake.in  Doxyfile  Makefile  README.md  README.rst  README.txt  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  appveyor.yml  astyle-cmd.sh  build.bat  circuit-Fiorano_GoogleEarth_edges_no_kerbs_rebuilt.txt  data_example.txt  format_cpp.rb  gc-compile-all.bat  gcc_workaround.rb  genTable.cc  licence.txt  license.txt  makefile  setup.rb  sub_branches.yaml  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  (+6 more)
src_py/: .clang-format  CMakeLists-Clothoids.txt  CMakeLists-Flags.txt  CMakeLists-QuarticRootsFlocke.txt  CMakeLists.txt  LICENSE  README.md
src_py/dependencies/pybind11/: LICENSE
src_py/include/: python-AABBtree.hh  python-BaseCurve.hh  python-Biarc.hh  python-CircleArc.hh  python-Clothoid.hh  python-ClothoidSpline-Interpolation.hh  python-ClothoidSpline-IpoptSolver.hh  python-ClothoidSpline-LMSolver.hh  python-ClothoidSpline-Solver.hh  python-G2libHeaders.hh  python-LineSegment.hh  python-Triangle2D.hh  python-ipopt-ClothoidSpline.hh
src_py/src/: python-AABBtree.cc  python-BaseCurve.cc  python-Biarc.cc  python-CircleArc.cc  python-Clothoid.cc  python-ClothoidSpline-Interpolation.cc  python-ClothoidSpline-IpoptSolver.cc  python-ClothoidSpline-LMSolver.cc  python-ClothoidSpline-Solver.cc  python-G2lib.cc  python-LineSegment.cc  python-Triangle2D.cc  python-ipopt-ClothoidSpline.cc
src_py/test/: __init__.py  __main__.py  test_interpolation.py  test_issues.py
standalone_project/: CMakeLists-cflags.txt  CMakeLists.txt  populate_project.rb  testIntersect.cc
third_parties/Lua/: CMakeLists.txt  build.bat  build.sh
toolbox/: CMakeLists.txt  CompileClothoidsLib.m  demos.xml  helptoc.xml  info.xml  populate_toolbox.rb  setup.m
toolbox/PIPAL-main/: README  README.md  rosensuzuki_cle0_output.txt  rosensuzuki_cle0_output1.txt  test1.m  test2.m  test2b.m
toolbox/PIPAL-main/PIPAL/: AUTHORS  LICENSE  README.m
toolbox/cmake/: CMakeLists-common.txt
toolbox/cmake_utils/: CMakeLists-utilities.txt  Rakefile_common.rb  Rakefile_configure.rb
toolbox/doc/: GettingStarted.mlx  Manual.md  Matlab_interface.md
toolbox/html/: Manual.html
toolbox/lib/: Biarc.m  BiarcList.m  CircleArc.m  ClothoidCurve.m  ClothoidList.m  ClothoidSplineG2.m  CompileClothoidsLib.m  CompileClothoidsLib_cmake.m  CompileLib.m  CurveBase.m  Dubins.m  Dubins3p.m  LineSegment.m  PolyLine.m  TriTriOverlap.m  Triangle2D.m
toolbox/src/: 3rd_fmt_format.cc  3rd_fmt_os.cc  3rd_rang.cc  AABBtree.cc  BBox.cc  Biarc.cc  BiarcList.cc  CPUinfo.cc  CPUinfo.hh  Circle.cc  Clothoid.cc  ClothoidAsyPlot.cc  ClothoidDistance.cc  ClothoidG2.cc  ClothoidList.cc  ClothoidListG2.cc  ClothoidListG2_P1P2.cc  ClothoidList_LBFGS.cc  Clothoids.hh  Clothoids.hh.orig  Clothoids_fmt.hh  Console.cc  Dubins.cc  Dubins3p.cc  Dubins3p_ellipse.cc  Dubins3p_pattern.cc  Fresnel.cc  G2lib.cc  G2lib.cc.orig  G2lib_intersect.cc  GenericContainer.cc  GenericContainer.hh  GenericContainerCinterface.cc  GenericContainerCinterface.h  GenericContainerCollapse.cc  GenericContainerConfig.hh  GenericContainerExplorer.cc  GenericContainerInterface_C.cc  GenericContainerLibs.hh  GenericContainerPromote.cc  (+116 more)
toolbox/src/Clothoids/: AABBtree.hxx  BBox.hxx  BaseCurve.hxx  BaseCurve_compatibility.hxx  BaseCurve_using.hxx  Biarc.hxx  BiarcList.hxx  BiarcList_compatibility.hxx  Biarc_compatibility.hxx  Circle.hxx  Circle_compatibility.hxx  Clothoid.hxx  ClothoidAsyPlot.hxx  ClothoidList.hxx  ClothoidList_ClothoidSplineG2.hxx  (+13 more)
toolbox/src_mex/: mex_BiarcListMexWrapper.cc  mex_BiarcMexWrapper.cc  mex_CircleArcMexWrapper.cc  mex_ClothoidCurveMexWrapper.cc  mex_ClothoidListMexWrapper.cc  mex_ClothoidSplineG2MexWrapper.cc  mex_Dubins3pMexWrapper.cc  mex_DubinsMexWrapper.cc  mex_FresnelCS.cc  mex_LineSegmentMexWrapper.cc  mex_PolyLineMexWrapper.cc  mex_TriTriOverlap.cc  mex_Triangle2DMexWrapper.cc  mex_Workaround.hxx  mex_XY_to_angle.cc  mex_common.hxx  mex_info.hxx  mex_utils.hh
toolbox/tests/: Clothoids_testList_2.m  Clothoids_testList_Adelaide.m  Clothoids_testList_Adria.m  Clothoids_testList_Adria_distance2.m  Clothoids_testList_Fiorano.m  Clothoids_testList_Melbourne.m  Clothoids_testList_Omega_trim.m  Clothoids_testList_Omega_trim2.m  Clothoids_testList_Silverstone.m  Clothoids_testList_Valencia.m  Clothoids_testList_omega.m  Clothoids_testList_omega2.m  Clothoids_testList_push_back.m  Clothoids_testList_target.m  Clothoids_test_Dubins0.m  Clothoids_test_Dubins1.m  Clothoids_test_Dubins2.m  Clothoids_test_Dubins3.m  Clothoids_test_Dubins4.m  Clothoids_test_Dubins5.m  Clothoids_test_Dubins6.m  Clothoids_test_Dubins7.m  Clothoids_test_Dubins8.m  Clothoids_test_G1_1.m  Clothoids_test_G1_2.m  Clothoids_test_G2_4.m  Clothoids_test_G2_7.m  Clothoids_test_G2_9.m  Clothoids_test_TT.m  Clothoids_test_all.m  Clothoids_test_biarc2.m  Clothoids_test_biarcList.m  Clothoids_test_biarc_fig1.m  Clothoids_test_biarc_fig4.m  Clothoids_test_circle.m  Clothoids_test_circle4.m  Clothoids_test_circle5.m  Clothoids_test_clothoid.m  Clothoids_test_clothoid10.m  Clothoids_test_clothoid3.m  (+71 more)
toolbox/tests_mlx/: bspline_plot.m  silverstone.txt  testList.mlx  testList_Adria_distance.mlx  testList_Donington.mlx  testList_Fiorano.mlx  testList_LeMans.mlx  testList_Melbourne.mlx  testList_Montecarlo.mlx  testList_Monza.mlx  testList_Monza2.mlx  testList_Mugello.mlx  testList_Omega_trim.mlx  testList_Silverstone.mlx  testList_Valencia.mlx  testList_omega.mlx  test_1_Omega.mlx  test_3_G2spline.mlx  test_G1_1.mlx  test_G1_2.mlx  test_G1_4.mlx  test_G2_1.mlx  test_G2_2.mlx  test_G2_3.mlx  test_G2_7.mlx  test_G2_9.mlx  test_TT1.mlx  test_biarc11.mlx  test_biarc5.mlx  test_biarc7.mlx  test_biarc8.mlx  test_circle.mlx  test_circle2.mlx  test_circle3.mlx  test_clothoid4.mlx  test_clothoid5.mlx  test_clothoid8.mlx  test_clothoid9.mlx  test_intersect4.mlx  test_intersect5.mlx  (+5 more)
(+3164 files in other folders)
